tests/lean/inductionParse.lean.expected.out
inductionParse.lean:4:18-5:6: error: unexpected identifier; expected '|'
